--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -203,7 +203,7 @@
             android:layout_marginTop="33dp"
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
-            android:id="@+id/fl_playground">
+            android:id="@+id/fl_setting">
 
             <TextView
                 android:layout_width="wrap_content"
